# aa-660-ai-doc-classification-deduplication

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .probe_labels.py  AA660-DocAI.lnk  CLASSIFICATION_SYSTEM_GUIDE.md  CONTRIBUTING.md  README.md  api_server.py  app_gui.py  config.yaml  pyproject.toml  pytest.ini  run_gui.py
.github/: CODEOWNERS  branch-protection.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
data/db/: docstore.sqlite
data/processed/: 05. SQL Injection Attacks and Defense.json  1406.2661.json  1607.03591.json  23287-g40.json  ASCII Codes.json  A_Byte_of_Python,_v1.92_(for_Python_3.0)_(2009).json  Animal Farm by George Orwell.json  ArthurEdwardWaite.json  DonaldAlexanderMackenzie.json  MasteringTheFundamentalsOfMathematics.json  S9_Mitosis (1).json  The Hacker Playbook 3.json  Understanding_Sustainable_Architecture.json  atp3_21x11.json  atp3_90x1.json  atp4_90.json  biostat - Copy.json  biostat.json  document1.json  fssPL102-585_2017Rfm.json  g40.json  maths.json  md715-r15.json  physics0601009.json  story.json
data/raw/: Famitracker Wiki.html
dataset/: First100.csv  First500.csv  test.txt
docs/: ASCII Codes.docx  Rare Gaming Dump.html  fssPL102-585_2017Rfm.docx  g40 - Copy.docx  g40.docx  md715-r15.docx
document_classification_demo/: demo.ipynb  taxonomy.json
reports/: run_10_20251029-131653.html  run_10_20251031-205511.html  run_11_20251031-205824.html  run_12_20251029-132801.html  run_13_20250905-013937.html  run_13_20250905-015047.html  run_13_20251031-210803.html  run_14_20250905-023156.html  run_14_20251030-212439.html  run_14_20251101-213849.html  run_15_20250905-024953.html  run_15_20250908-032652.html  run_16_20250915-042144.html  run_17_20250916-005522.html  run_18_20251001-083510.html  run_1_20251029-194836.html  run_1_20251101-222325.html  run_20_20251001-085140.html  run_21_20251029-171018.html  run_21_20251029-185141.html  run_21_20251029-185819.html  run_21_20251029-190506.html  run_25_20251031-132016.html  run_2_20251101-223003.html  run_3_20251029-101427.html  run_3_20251029-195334.html  run_7_20251029-120458.html  run_80_20251010-183107.html  run_82_20251024-121332.html  run_83_20251025-080952.html  run_85_20251025-085036.html  run_88_20251025-095948.html  run_88_20251025-103441.html  run_88_20251025-104932.html  run_8_20251030-173402.html  run_8_20251030-173656.html  run_8_20251030-203555.html  run_8_20251030-204949.html  run_8_20251031-202506.html  run_9_20251029-124255.html  (+2 more)
src/: Document.py  app.py  cli_nd.py
src/Learners/: base.py  embed_model.py  minhash_model.py  simhash_model.py
src/api/: app.py
src/core/: __init__.py  collection.py  document.py  label.py
src/ensemble/: arbiter.py
src/features/: text_preproc.py
tests/: conftest.py  test_api_comprehensive.py  test_basic.py  test_classifier.py  test_cli_e2e_mocked.py  test_integration_comprehensive.py  test_processing_pdf_ingestion.py
(+51 files in other folders)
