[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aa660-doc-ai"
version = "0.1.0"
description = "Document classification and deduplication system with FastAPI"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23,<3.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.9,<2.0",
    "scikit-learn>=1.3,<2.0",

    "simhash>=2.1.2",
    "datasketch>=1.6.5",
    "faiss-cpu>=1.7,<2",
    "sentence-transformers>=2.6",
    "transformers>=4.40",
    "torch>=2.2",

    "langdetect>=1.0.9",

    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    "jinja2>=3.1",
    "markdown>=3.4",
    "matplotlib>=3.8",
    "regex>=2023.0",
    "PyYAML>=6.0",
    "pydantic>=2.5",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    "pillow>=10.0",
    "lxml>=4.9",

    "psutil>=5.9",
    "pynvml>=11.0 ; platform_system == 'Windows' or platform_system == 'Linux'",

    "tqdm>=4.65",
    "requests>=2.31",
]

[project.scripts]
dupfinder = "src.cli_nd:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
